fix: Enemy Tests Reformatted, Tower Tests Reformatted and Debugged.